initial commit of web page - add index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html class="no-js" lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>zerosandones.dev</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<h1 class="text-white text-4xl font-semibold">Jekyll Starter Tailwind</h1>
+  <body class="flex flex-col h-screen items-center justify-center w-full">
+
+    <div class="flex-grow w-full flex items-center justify-center">
+        <h1 class="text-yellow-500 text-4xl font-semibold">Zeros <span class="text-green-400">&&</span> Ones</h1>
+    </div>
+
+    <div class="text-white bg-orange-400 flex flex-col md:flex-row w-full py-3 px-5 space-y-2 md:justify-between">
+        <div>
+            <div>Site created by Zeros && Ones</div>
+            <div>Built with <a class="hi-light-link" href="https://jekyllrb.com/">Jekyll</a> & <a class="hi-light-link" href="https://tailwindcss.com/">tailwindcss</a></div>
+        </div>
+        <div class="flex flex-row space-x-2">
+            <a href=mailto:david.glendenning@zerosandones.dev"><img class="h-8" src="assets/imgs/email-white-36dp.svg"></img></a>
+            <a href="https://github.com/zerosandones.html"><img class="h-8" src="assets/imgs/GitHub-Mark-Light-32px.png"></img></a>
+            <a href="https://twitter.com/GlendenningDave"><img class="h-8" src="assets/imgs/Twitter_Social_Icon_Circle_White.svg"></img></a>
+        </div>
+        <div>
+            <div>
+                Hosted on <a class="hi-light-link" href="https://firebase.google.com/">Firebase</a>.
+            </div>
+        </div>
+    </div>
+  </body>
+</html>
