--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
             </div>
         </div>
     </div>
+
+      <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="/__/firebase/7.22.1/firebase-app.js"></script>
+
+    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+    <script src="/__/firebase/7.22.1/firebase-analytics.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <script>
+      firebase.analytics();
+    </script>
   </body>
 </html>
